Fixed small spacing issue

--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -120,5 +120,5 @@ pre
 	
 
 #rightLogo
-	right: 2.5em
+	right: 1.1em
 	top: 2.5em
